# framer

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README  README.md  build_docker.sh  build_ffmpeg.sh  build_shell.sh  ffmpeg.hpp  framer.hpp  index.html  main.cpp  smoke-test.sh
cmake/: FindFFMPEG.cmake
examples/audio-only/: CMakeLists.txt  audio-only.cc
examples/hello-world/: CMakeLists.txt
examples/statically-link/: .gitignore  CMakeLists.txt  README.md  hello-world.cc  prepare.sh
examples/video-hls-stream/: CMakeLists.txt  index.html  video-hls-stream.cc
examples/video-hls-stream-realtime/: CMakeLists.txt  video-hls-stream-realtime.cc
examples/video-with-audio/: CMakeLists.txt  video-with-audio.cc
examples/video-with-audio-sdl/: CMakeLists.txt  video-with-audio-sdl.cc
examples/video-with-audio-sfml/: CMakeLists.txt  video-with-audio-sfml.cc
examples/video-with-sfml/: CMakeLists.txt  video-with-sfml.cc
examples/video-without-audio/: CMakeLists.txt  video-without-audio.cc
resources/: cut.txt  script.sh  script2.sh
